<!--
  ~ Copyright (c) 2019 Kirig Technologies. All rights reserved.
  ~
  ~ This document is considered proprietary and confidential. It may not be stored, reproduced,
  ~ or transmitted by any means without express written permission from Kirig Technologies.
  -->

<resources>
    <string name="app_name">BudgetAppJava</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dummy_tabbed">DummyTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_tx_add">TxAddActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_test_tx_add">TestTxAddActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_commit_tx">BtnCommitTx</string>
    <string name="btn_commit_curr">BtnCommitCurr</string>
    <string name="label_account">Account:</string>
    <string name="label_tx_note">Note:</string>
    <string name="label_tx_amount">Amount:</string>
    <string name="hint_tx_note">Note</string>
    <string name="label_acct_account_name">Account Name:</string>
    <string name="hint_currency_name">Currency Name (e.g. Japanese Yen)</string>
    <string name="hint_currency_symbol">Currency Symbol (e.g. ₱)</string>
    <string name="label_decimal_places">Decimal Places:</string>
    <string name="hint_currency_abbrev">Currency Abbreviation (e.g. USD)</string>
    <string name="toast_curr_name_empty">Display name cannot be empty</string>
    <string name="toast_curr_abbr_empty">Abbreviation cannot be empty</string>
    <string name="toast_curr_symb_empty">Symbol cannot be empty</string>
    <string name="title_currency_list">Currencies</string>
    <string name="title_currency_detail">Currency Detail</string>
    <string name="title_add_currency">Add New Currency</string>
    <string name="hint_acct_name">Account Name (e.g. My Savings Account)</string>
    <string name="hint_acct_currency">Account Currency</string>
    <string name="btn_commit_acct">BtnCommitAcct</string>
    <string name="toast_acct_name_blank">Account name cannot be blank</string>
    <string name="toast_acct_curr_blank">Please pick a currency</string>
</resources>
